[UTF-8 Japanese]


TogaGem 変更履歴


3.121.2 (2019-06-06)
    ・DatatypeIo is public now, for replacing JAXB.

3.120.2 (2019-06-04)
    ・replacing JAXB DatatypeConverter.

3.101.106 (2019-06-02)
    ・必須環境をJavaSE8に引き上げ。
    ・Mercurial(3.102.4)からGit(3.101.105-SNAPSHOT)へSCMを移行。

3.101.4 (2013-06-16)
    ・assemblyプラグイン設定のプロジェクト不備を修正。

3.101.2 (2013-06-16)
    ・パッケージ構成を変更。
    ・クォータニオン→オイラー角変換の精度が向上。
    ・多言語対応に際するデフォルトロケールへのフォールバックを禁止。
    ・コールバックpmdIKInfo()がpmdIKChainInfo()より先に呼ばれるよう変更。
    ・MikuMikuDance Ver7.40以降の新VMDファイルフォーマットに対応

2.102.2 (2013-03-17)
    ・Maven3対応。
    ・JRE版数によって"0.001"や"0.0010"になるXML上の実数表記揺れを吸収。

2.101.2 (2011-08-24)
    ・VMDファイルの読み込みに対応。
    ・パッケージ構成の整理。
    　※各種ファイルの書き出し機能は各種アプリ側に移管された。

1.105.2 (2010-10-09)
    ・接続ボーンを持たない剛体のサポート。

1.104.2 (2010-10-07)
    ・TogaParser1.103.2版を吸収する形で開発を再スタート。
    ・PMDファイルの読み書きに対処。
    ・XML版モデルデータの読み書きに対処。


--- EOF ---